# LanguageBuddy

./: .gitignore  README.md  about.py  account.py  languagebuddy-f531e-c4665f466d27.json  learn.py  main.py  progress.py  pyproject.toml  study_vocabulary.py
